fixed theme overlap issue

--- a/styletest.css
+++ b/styletest.css
@@ -1,4 +1,4 @@
-.sec-html {
+#app {
   --zz-bg: #3c3c3c;
   --zz-ov: #494949;
   --zz-fg: #ffffff;
